csrf token added

--- a/inventory/templates/inventory/delete-product.html
+++ b/inventory/templates/inventory/delete-product.html
@@ -23,7 +23,7 @@
               <h3>Are you sure want to delete {{product}}</h3>
             </div>
             <form action="" method="POST">
-              <!-- {%  csrf_token %} -->
+              {% csrf_token %}
 
               <a href="{% url 'products' %}" class="btn btn-primary">Cancel</a>
               <input type="submit" name="Delete" class="btn btn-danger" />
